CB-14096: Fix platforms image overflowing on mobile

--- a/www/static/css-src/_home.scss
+++ b/www/static/css-src/_home.scss
@@ -283,6 +283,10 @@ img#logo_top {
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
+
+    img {
+        max-width: 100%;
+    }
 }
 .card_gallery {
     color:white;
